--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name= "CustomTabStyle" parent ="TextAppearance.Design.Tab">
+        <item name="android:textSize">6sp</item>
+    </style>
 </resources>
