--- a/app/src/main/res/layout/fragment_scanner.xml
+++ b/app/src/main/res/layout/fragment_scanner.xml
@@ -5,16 +5,61 @@
     android:layout_height="match_parent"
     tools:context=".qrscanner.fragments.HomeFragment">
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:padding="50dp"
+        >
+
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:src="@drawable/qr_code_scan_icon">
+
+        </ImageView>
+    </androidx.cardview.widget.CardView>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Scanner"
-            android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:id="@+id/Code"
+            android:layout_width="170dp"
+            android:layout_height="130dp"
+            android:layout_above="@+id/btnScan"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="122dp"
+            android:layout_marginTop="442dp"
+            android:layout_marginEnd="119dp"
+            android:layout_marginBottom="25dp"
+            android:text="Code"
+            android:textAlignment="center"
+            android:textSize="50dp"></TextView>
+
+        <Button
+            android:id="@+id/btnScan"
+            android:layout_width="168dp"
+            android:layout_height="128dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="11dp"
+            android:layout_marginBottom="6dp"
+            android:text="Scan Code"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/btnEnterScan"
+            android:layout_width="168dp"
+            android:layout_height="128dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="6dp"
+            android:text="Enter Code"
+            android:textColor="@color/black" />
     </RelativeLayout>
 </FrameLayout>
