added logout button, deleted unused button

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,14 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <Button
+            android:id="@+id/btnLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Home"
-            android:textColor="@color/black"
-            android:textSize="24sp" />
-
+            android:text="Logout"
+            android:textColor="@color/black" />
 
     </RelativeLayout>
 </FrameLayout>
