--- a/app/src/main/res/layout/fragment_scanner.xml
+++ b/app/src/main/res/layout/fragment_scanner.xml
@@ -37,29 +37,20 @@
             android:layout_marginBottom="25dp"
             android:text="Code"
             android:textAlignment="center"
-            android:textSize="50dp"></TextView>
+            android:textSize="50sp"></TextView>
 
         <Button
             android:id="@+id/btnScan"
-            android:layout_width="168dp"
-            android:layout_height="128dp"
+            android:layout_width="351dp"
+            android:layout_height="121dp"
             android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="30dp"
-            android:layout_marginEnd="11dp"
-            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="13dp"
             android:text="Scan Code"
             android:textColor="@color/black" />
 
-        <Button
-            android:id="@+id/btnEnterScan"
-            android:layout_width="168dp"
-            android:layout_height="128dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="6dp"
-            android:text="Enter Code"
-            android:textColor="@color/black" />
     </RelativeLayout>
 </FrameLayout>
